empty form in index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,31 @@
-<h1>Hello World<h1>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>playmaker.com</title>
+  <link rel="stylesheet" href="/vendor/bootstrap.min.css">
+</head>
+
+<body>
+	<div class="container">
+		<h1>Playmaker.com</h1>
+		<form action="/users" method="post">
+			<h2>Register</h2>
+			<p>
+				<label for="register-email">Email</label>
+				<input type="text" name="email" id="register-email">
+			</p>
+			<p>
+				<label for="register-paswword">Password</label>
+				<input type="password" name="password" id="register-password">
+			</p>
+			<p>
+				<button>Create Account</button>
+			</p>
+		</form>
+	</div>	
+</body>
+
+</html>
