--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,11 +12,17 @@
 	<div class="container">
 		<div class="jumbotron">
 			<h1>Playmaker.com</h1>
+			<h2>Register</h2>
 			<form class="form" action="/users" method="post">
-				<h2>Register</h2>
-				<%if(locals.error) {%>
+				<!-- if not using flash -->
+				<!-- <%if(locals.error) {%>
 					<div class="alert alert-danger"><%= error%></div>
-				<% } %>
+				<% } %> -->
+				<% if (locals.errors.length) {%>
+				<% errors.forEach((error) => { %>
+					<div class="alert alert-danger"><%=error %></div>
+				<% }) %>
+				<%}%>
 				<p class="form-group">
 					<label for="register-email">Email</label>
 					<input class="form-control" type="text" name="email" id="register-email">
@@ -30,6 +36,31 @@
 				</p>
 			</form>
 		</div>
+		<div class="jumbotron">
+			<h2>Log In</h2>
+			<form class="form" action="/login" method="post">
+				<!-- if not using flash -->
+				<!-- <%if(locals.error) {%>
+					<div class="alert alert-danger"><%= error%></div>
+				<% } %> -->
+				<% if (locals.loginErrors.length) {%>
+				<% loginErrors.forEach((error) => { %>
+					<div class="alert alert-danger"><%=error %></div>
+				<% }) %>
+				<%}%>
+				<p class="form-group">
+					<label for="email">Email</label>
+					<input class="form-control" type="text" name="email" id="email">
+				</p>
+				<p class="form-group">
+					<label for="password">Password</label>
+					<input class="form-control" type="password" name="password" id="password">
+				</p>
+				<p>
+					<button type="submit" class="btn btn-primary">Log In</button>
+				</p>
+			</form>
+		</div>		
 	</div>
 </body>
 
